fix diamond image height, added more top padding on mobile 1st section

--- a/css/styles.css
+++ b/css/styles.css
@@ -718,7 +718,7 @@ footer {
     width: 100%; } }
 @media (max-width: 575px) {
   .container-fluid section:first-of-type {
-    padding-top: 30px; }
+    padding-top: 60px; }
 
   h1 {
     font-size: 3.1em; }
