--- a/scss/_responsiveness.scss
+++ b/scss/_responsiveness.scss
@@ -11,7 +11,7 @@
 @media (max-width: 575px) {
   .container-fluid section{
     &:first-of-type{
-      padding-top: 30px;
+      padding-top: 60px;
     }
   }
   h1 {
